# GenAI

./: README.md  YOLO.md  pyproject.toml
langchain_basics/: chaining.py  codes.py  langchain_basics.ipynb  qnachatbot.py  test.py  tools.ipynb
